# epubapi

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.gen_metadata  Dockerfile.get_metadata  Dockerfile.img2epub  README.md  Taskfile.yml  compose.yml  convert.sh  openapi.json  rust-toolchain.toml
.github/workflows/: docker-publish.yml  test.yml
.sqlx/: query-007fedcfa3acde4b674f44398b56b451924f277b84bef409841cd7fd4dcb3425.json  query-050b72d9285fe196d83d062ec7a0bd96495cc5c27ed02385aba4da5e1c1ee365.json  query-0a736de77ededd2dac0aaa291f7d42caee16b3d0329bddef5e1b25c66ab03867.json  query-11fdeab1e3392443d5c600862c3731b2157425bf6c5d8a10599eef26863328b9.json  query-144253af8287a57de2e877d989638cb3c14b0f63c41a0f5a0a5309aaad28be3f.json  query-15d15cdbbda2e58c9ded9dc14c06a3f6208674d8b37a521e28caef088487e4f1.json  query-237b417dd653635a910c9c1f1cd4d6f486f41222a2f9613ff19760d10aecdf51.json  query-2f8f572ec839e1b1a381de6cdd8dd352de5da130b31d40dee2947faa756e8f60.json  query-34e512598f850d194a38ec980375ccd748c75ca3ccf9a6e3cff3c142459e86fe.json  query-35f989551018ad47f78f36e778d4e17e3199003479224e9d8d2dec8466bf79d1.json  query-3aff51f3d52dc758ad64cc3c2ae6e0799e5f358502a37b6ad3d73482627805b7.json  query-44d43d69fba0eaceb19a956dc1fb0e5bf3732204301a6d072eec70a33da10180.json  query-4b3b0dd4d0fab3ae160f7a8596a1cde28713cd02d626cfc422d7e822aec6f006.json  query-4c75a2395a1b20597b83aaf75faef7c4f94f211454f2439b0f11520a7625e660.json  query-4c768c3ff5c9f2f1ae6f24f9a8486276b592673399caca3847af951158619599.json  query-5392bcc47a8befe50c89a31d56a51bf8c0cc1a3513da14c1ccc261ac0919ef7f.json  query-54f3d7aaca5597f54f7406aa4500e7207ee795e93fc4660847321388372a9e46.json  query-55d4a6df8397cf08a4f34e0d1f7e0ab92dd1ba327489af6ea7933cddc4be61e9.json  query-56c8ceece5fbc9e4d53e3d082ab127e33b1d5dee0377fa4224affee7908d8205.json  query-5a76c3358d718b3383f8678b322a1f1ff9fcfa1ff601dcd0874251065eca6d43.json  query-5ca4ca8042c72cafcc7621bb5b28285aca868fbf32affe4d48b7685573e85f51.json  query-5d0d60f26ece8d33cef46d845425ab096ba4505d49fb23180ea503f9434d1f4d.json  query-60e6112559de9f7710a99a1e10989fe31f171293e73223434dc777b040636e44.json  query-63ce1afc379f975fd1a55c8531bd5147eb03204dd7c17d83e65ddce34171b73a.json  query-74b6e6d47b6723b1ba69383a20fb7668f9e806a7942bac53212b57e29836cfd6.json  query-78d7571cdfb793e37569d53bdfd6c21e03f59848a002d4ecf9e9b1b677eaf00e.json  query-8083cce16b71ea3b189fbac4211c6954da162dc4416d966ded709eb221190ec7.json  query-819f8502f6149e68f0cd3a29110810cb6917fd49d3997bcce90b0edbcd31c906.json  query-82812abec0d62215d6aa367308c29efde5da528c07eddd8de49270ebcb7c4868.json  query-84f826bae5ca3b13498e16d9089ebf75cce61bf9fab909120dda9000909a90ce.json  query-87a2576510ccc45e0db170f85ecee1df5da7ad19f2392589a467bef0407ccff5.json  query-90667afead0fe868d511fd54732531a4a46f5c3eb0d222a16e0836ebbdf703b5.json  query-90842ead65e8cb56c817c744090509ffcfd643fd4a7b021fe37cb7298f351cf1.json  query-917569194a79f82a6ce824d73dfd55c40912305e0244d451b5218611ceba8d35.json  query-945ec4bc2e052dfec0e12676540e03a08b215ae5a7cada12f919afbb9ffadf82.json  query-97591fc79d1208908664f902699d0b3b4b3032092d80c6f16680f3bdff8c5810.json  query-9f447ad772f2ca43de9435351282693f885a4edee1889cfa8358710dd0e6921b.json  query-a5bb5b8b11dffe03dcabdbd23cbf9b3eb66062153149d6c90221bbed38ea695e.json  query-b1b2bbce9b46853fb362fe5765923f7b4786b693ad2f8cbb142eca900d7be2a7.json  query-b24098dd85f06dfcf5dfb52f5f1de02d4a35eab2f745f1f368fb216476f6c4c3.json  (+14 more)
bibi/presets/: default.js
migrations/: 1_init.sql  2_add_issuer_id_column_to_invitations.sql  3_add_id_column_to_books_as_primary_key.sql  4_change_cover_image_type_to_text.sql  5_add_direction_to_books.sql  6_add_layout_to_books.sql  7_add_images_column_to_books.sql  8_add_key_index_to_books.sql  99_insert_test_data.sql  9_add_adding_tag_tasks_table.sql
src/: db.rs  lib.rs  minio.rs  routes.rs  service.rs
src/db/: db.rs
src/minio/: minio.rs
src/routes/: routes.rs
src/service/: tag.rs
src/service/book/: model.rs  route.rs
src/service/invitation/: model.rs  route.rs
src/service/tag/: model.rs  route.rs
src/service/user/: model.rs  route.rs
test_assets/: create_bucket.sh  gen_test_data.jl  metadata.json  scala-with-cats.epub  tar.sh
(+9 files in other folders)
