[package]
name = "epubapi"
version = "0.1.0"
edition = "2021"
default-run = "server"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5.5", features = [
    "behavior-version-latest",
    "rustls",
] }
aws-sdk-s3 = { version = "1.48.0", features = ["rustls"] }
axum = { version = "0.7.5", features = ["multipart"] }
axum-test = "15.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
cookie = "0.18.1"
ctor = "0.2.8"
epub = "2.1.2"
futures = "0.3.30"
image = "0.25.2"
img2epub = "0.1.9"
jsonwebtoken = "9.3.0"
log = "0.4.22"
mime = "0.3.17"
regex = "1.10.6"
roxmltree = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "tls-rustls",
    "runtime-tokio",
    "migrate",
] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
tracing = "0.1.40"
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }
