[package]
name = "epubapi"
version = "0.1.0"
edition = "2021"
default-run = "server"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5.8", features = [
    "behavior-version-latest",
    "rustls",
] }
aws-sdk-s3 = { version = "1.57.0", features = ["rustls"] }
axum = { version = "0.7.7", features = ["multipart"] }
axum-test = "16.2.0"
chrono = { version = "0.4.38", features = ["serde"] }
cookie = "0.18.1"
ctor = "0.2.8"
epub = "2.1.2"
futures = "0.3.31"
image = "0.25.4"
img2epub = "0.1.14"
jsonwebtoken = "9.3.0"
log = "0.4.22"
mime = "0.3.17"
regex = "1.11.0"
roxmltree = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "uuid",
    "chrono",
    "macros",
    "tls-rustls",
    "runtime-tokio",
    "migrate",
] }
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs", "cors"] }
tracing = "0.1.40"
utoipa = { version = "5.1.1", features = ["axum_extras"] }
utoipa-rapidoc = { version = "5.0.0", features = ["axum"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "8.0.1", features = ["axum"] }
uuid = { version = "1.10.0", features = ["fast-rng", "v4"] }
